compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencyConflictingLibraries/output.fir.txt
compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencyConflictingLibraries/source.kt:7:8: error: cannot access class 'a.A.Inner'. Check your module classpath for missing or conflicting dependencies.
    b2.consumeA(b1.produceA())
       ^
compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencyConflictingLibraries/source.kt:7:17: error: argument type mismatch: actual type is 'kotlin.Any?', but 'a.A.Inner<b.B2, kotlin.Int, kotlin.String, kotlin.Double>' was expected.
    b2.consumeA(b1.produceA())
                ^
compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencyConflictingLibraries/source.kt:7:20: error: cannot access class 'a.A.Inner'. Check your module classpath for missing or conflicting dependencies.
    b2.consumeA(b1.produceA())
                   ^
compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencyConflictingLibraries/source.kt:8:8: error: cannot access class 'a.A.Inner'. Check your module classpath for missing or conflicting dependencies.
    b2.consumeA(b1.produceAGeneric("foo"))
       ^
compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencyConflictingLibraries/source.kt:8:17: error: argument type mismatch: actual type is 'kotlin.Any?', but 'a.A.Inner<b.B2, kotlin.Int, kotlin.String, kotlin.Double>' was expected.
    b2.consumeA(b1.produceAGeneric("foo"))
                ^
compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencyConflictingLibraries/source.kt:8:20: error: cannot access class 'a.A.Inner'. Check your module classpath for missing or conflicting dependencies.
    b2.consumeA(b1.produceAGeneric("foo"))
                   ^
compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencyConflictingLibraries/source.kt:12:8: error: cannot access class 'a.AA.Inner'. Check your module classpath for missing or conflicting dependencies.
    b2.consumeAA(b1.produceAA())
       ^
compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencyConflictingLibraries/source.kt:12:18: error: argument type mismatch: actual type is 'kotlin.Any?', but 'a.AA.Inner<kotlin.String, kotlin.Int, kotlin.Unit>' was expected.
    b2.consumeAA(b1.produceAA())
                 ^
compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencyConflictingLibraries/source.kt:12:21: error: cannot access class 'a.AA.Inner'. Check your module classpath for missing or conflicting dependencies.
    b2.consumeAA(b1.produceAA())
                    ^
compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencyConflictingLibraries/source.kt:16:8: error: cannot access class 'a.AAA.Inner.InnerInner'. Check your module classpath for missing or conflicting dependencies.
    b2.consumeAAA(b1.produceAAA())
       ^
compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencyConflictingLibraries/source.kt:16:19: error: argument type mismatch: actual type is 'kotlin.Any?', but 'a.AAA.Inner.InnerInner<kotlin.Unit, kotlin.Int, kotlin.String>' was expected.
    b2.consumeAAA(b1.produceAAA())
                  ^
compiler/testData/compileKotlinAgainstCustomBinaries/missingDependencyConflictingLibraries/source.kt:16:22: error: cannot access class 'a.AAA.Inner.InnerInner'. Check your module classpath for missing or conflicting dependencies.
    b2.consumeAAA(b1.produceAAA())
                     ^
COMPILATION_ERROR
